<resources>
    <string name="app_name">World Trade Watch</string>
    <string name="enter_user_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">******</string>
    <string name="log_in">LogIn</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="apply_for_membership">Apply For Membership</string>
    <string name="forget_password">Forgot Password</string>
    <string name="forum">Forum</string>
    <string name="chats">Chats</string>
    <string name="search">Search</string>
    <string name="search_et">Search....</string>
    <string name="create_group">Create New Group</string>
    <string name="contacts">Contacts</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_details">Company Details*</string>
    <string name="stocks">Stocks</string>
    <string name="reviews">Reviews</string>
    <string name="please_enter_email">Please enter email here</string>
    <string name="verify_code_et">Enter received Verification Code</string>
    <string name="resend_code">resend code</string>
    <string name="_string_next">Next</string>
    <string name="wait_for">Please wait…</string>
    <string name="enter_otp">Please Enter an OTP</string>
    <string name="new_code_email_instruction">New code sent to your email.</string>
    <string name="otp_email_body_1">Your requested OTP verification code is</string>
    <string name="otp_email_body_2">Please enter this code in order to verify your account. Don\'t share this with others.</string>
    <string name="otp_email_title">OTP Verification Code</string>
    <string name="_string_seconds">seconds</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="_string_new_password">New Password</string>
    <string name="sell">Sell</string>
    <string name="make">Brand:</string>
    <string name="model">Model:</string>
    <string name="st_model">Model</string>
    <string name="st_location">Location :</string>
    <string name="year">Year:</string>
    <string name="year_st">Year</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address*</string>
    <string name="user_name">Username*</string>
    <string name="location">Location</string>
    <string name="business_details">Business Name*</string>
    <string name="social_media_links">Social Media Links</string>
    <string name="box">Box</string>
    <string name="papers">Papers</string>
    <string name="paper">Paper:</string>
    <string name="st_box">Box:</string>
    <string name="string_message_wait">Please Wait...</string>
    <string name="email_error">You are entering wrong email</string>
    <string name="_string_edit_text_hint_user_email">User name</string>
    <string name="_string_edit_text_hint_user_password">Password</string>
    <string name="_string_error_enter_password">Enter password</string>
    <string name="add_new_watch">Add new watch</string>
    <string name="post_type">Post type</string>
    <string name="buy_or_sell">Buy / Sell</string>
    <string name="brand">Brand Name</string>
    <string name="brand_name_here">Enter brand name</string>
    <string name="case_size">Case size</string>
    <string name="case_size_here">Enter case size</string>
    <string name="price">Price</string>
    <string name="sub_continent">Continent</string>
    <string name="currency">Enter your currency</string>
    <string name="curreny_st">Currency</string>
    <string name="country">Country*</string>
    <string name="yes_or_no">Yes / No</string>
    <string name="update_watch">Update Watch</string>
    <string name="update">Update</string>
    <string name="rating">Rating</string>
    <string name="submit">Submit</string>
    <string name="review_message">Review Message</string>
    <string name="star_rating">Kindly give your star rating.</string>
    <string name="something_went_wrong">Something went wrong please try again later.</string>
    <string name="type_message">Please Type message</string>
    <string name="convert">Convert</string>
    <string name="type">Type</string>
    <string name="pleae_give_report">Write review here.</string>
    <string name="copy_rights"><![CDATA[owned &amp; copyrighted by Artivea Inc]]></string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="st_rating">Rating :</string>
    <string name="st_stock">Stock :</string>
    <string name="stock">Stock</string>
    <string name="report">Report</string>
    <string name="report_user">Report User :</string>
    <string name="st_country">Country :</string>
    <string name="st_social_media">Social Media :</string>
    <string name="setting">Settings</string>
    <string name="enter_model_hint">Enter model here</string>
    <string name="repost">Repost</string>
    <string name="post">Post</string>
    <string name="buy">Buy</string>
    <string name="vat_num">Vat No.*</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="create">Create</string>
    <string name="no_data_found">No Data Found</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="take_image">Take Image From</string>
    <string name="ok">Ok</string>
    <string name="st_liketo">Would you like to</string>
    <string name="st_takepic">Take Picture</string>
    <string name="st_case_size">Case Size:</string>
    <string name="st_price">Price:</string>
    <string name="block_alert">Block Alert!</string>
    <string name="block_alert_msg">Are you sure you want to block this user from sending you messages?</string>
    <string name="block">Block</string>
    <string name="average_ratting">Average Rating</string>
    <string name="ratting_breakdown">Ratting Breakdown</string>
    <string name="all">All</string>
    <string name="cannot_rate_yourself">Can not rate yourself.</string>
    <string name="add">ADD</string>
</resources>