<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    >

    <TextView
        android:id="@+id/label_field"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:background="@drawable/login_top_bg"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/take_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/dialog_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_field"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/take_pic"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/label_field"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_blue_btn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@+id/take_pic"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_blue_btn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>