<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/mainHeaderAPPName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/currencyExchangeIVMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_currency_exchange"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menuMA"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mainHeaderAPPName"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/menuMA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/ic_menu_dot"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/mainHeaderAPPName"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/light_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/forumsMenu"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/menu_selected_bg"
            android:gravity="center"
            android:text="@string/forum"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/chatsMenu"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/menu_unselected_bg"
            android:gravity="center"
            android:text="@string/chats"
            android:textColor="@color/dark_grey"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/searchMenu"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/menu_unselected_bg"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/dark_grey"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/contactssMenu"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/menu_unselected_bg"
            android:gravity="center"
            android:text="@string/contacts"
            android:textColor="@color/dark_grey"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium" />

        <TextView
            android:id="@+id/stocksMenu"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/menu_unselected_bg"
            android:gravity="center"
            android:text="@string/stocks"
            android:textColor="@color/dark_grey"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium" />

    </LinearLayout>


    <com.watchtrading.watchtrade.Utils.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />





</androidx.constraintlayout.widget.ConstraintLayout>