<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LogInActivity">


    <ImageView
        android:id="@+id/backgroundIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@drawable/meeting_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:alpha="0.90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/logInTopBg"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/login_top_bg"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/light_grey"/>
    </LinearLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_section_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/userEmailETLA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_user_email"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />


        <EditText
            android:id="@+id/userPasswordETLA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:fontFamily="@font/poppins_regular"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userEmailETLA"
            app:layout_constraintStart_toStartOf="@+id/userEmailETLA"
            app:layout_constraintTop_toBottomOf="@+id/userEmailETLA"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/logInBtn"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/round_blue_btn"
            android:text="@string/log_in"
            android:fontFamily="@font/poppins_medium"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userEmailETLA"
            app:layout_constraintStart_toStartOf="@+id/userEmailETLA"
            app:layout_constraintTop_toBottomOf="@+id/userPasswordETLA" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logInIVHeader"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:civ_border_color="@color/dark_grey"
        android:scaleType="centerCrop"
        app:civ_border_width="1dp"
        android:visibility="gone"
        android:background="@drawable/app_icon"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/backgroundIV"
        app:layout_constraintStart_toStartOf="@+id/backgroundIV"
        app:layout_constraintTop_toTopOf="@+id/logInTopBg"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="82dp"
        android:background="@drawable/round_btn"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:padding="8dp"
        android:text="@string/create"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/membersShipBtnLA"
        app:layout_constraintEnd_toEndOf="@+id/backgroundIV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/backgroundIV"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/bottomLLLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backgroundIV"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/backgroundIV"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="13sp" />


    </LinearLayout>


    <Button
        android:id="@+id/membersShipBtnLA"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_corner_btn"
        android:text="@string/apply_for_membership"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomLLLA"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>